--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ publishing {
 
             groupId 'io.9ci.yakworks'
             artifactId 'codenarc-extra'
-            version '1.0.1.RC1'
+            version '1.0.1.RC2'
         }
     }
 }
@@ -44,9 +44,12 @@ bintray {
     publications = ['mavenJava']
 
     pkg {
+
         repo = 'maven'
         name = 'codenarc-extra'
         desc = 'Extra codenarc rules'
+        userOrg = '9ci'
+
         licenses = ['Apache-2.0']
         publicDownloadNumbers = true
 
@@ -56,6 +59,4 @@ bintray {
         issueTrackerUrl = 'https://github.com/yakworks/codenarc-extra/issues'
 
     }
-
-    override = rootProject.version.endsWith("SNAPSHOT")
 }
