--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ publishing {
 
             groupId 'yakworks'
             artifactId 'codenarc-extra'
-            version '1.0.1.RC3'
+            version '1.0.1'
         }
     }
 }
