--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ publishing {
             from components.java
             artifact sourceJar
 
-            groupId 'yakworks'
+            groupId 'io.9ci.yakworks'
             artifactId 'codenarc-extra'
             version '1.0.1'
         }
